k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: careertrack
  labels:
    name: careertrack
    app: careertrack
